--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     let valid = false;
 
                     let unArray = ["Roman", "roman"]; // as many as you like - no comma after final entry
-                    let pwArray = ["", "123"]; // the corresponding passwords;
+                    let pwArray = ["", ""]; // the corresponding passwords;
 
                     for (let i = 0; i < unArray.length; i++) {
                         if ((un == unArray[i]) && (pw == pwArray[i])) {
