--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
                     <p>звертаємося до body і не до класів home потім суворо йде блок aside ід block потім до li яке є третім і до псевдо класа before . Лінк буде перед червоного кольору</p>
                 </li>
                 <li>
+                    <p>
+                        к чему обращаемся? І що буде червоного кольору? .sticky:not([class*="mobile-open"]) .language-chooser > a {color:red}
+                    </p>
+                    <p>До класу sticky але не до класів mobile-open. Також є звернення до лінку який знаходиться в класі language-chooser
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        А це що описує? body:not([class*="home"]) .terms-conditions span:first-of-type { margin-left: 1vw; }
+                    </p>
+                    <p>Перше відноситься до body, але не до класів home. Другий описує зовнішній відступ від першого span який знаходиться в terms-conditions</p>
+                </li>
+                <li>
                     <p>Що робить властивість clear?</p>
                     <p>Забирає обтікання після float</p>
                 </li>
@@ -96,13 +109,49 @@
                 </li>
                 <li>
                     <p>
-                        var let const що це і яка різниця?
+                        var let const, що це і яка різниця?
                     </p>
                     <p>це зміні які мають різну область видимості, var видна лише в областях функції, let має видимість в {} і така сама видимість і в const , але const прийнято не змінювати</p>
                 </li>
                 <li>
                     <p>Скільки параметрів може мати функція?</p>
                     <p>Безліч</p>
+                </li>
+                <li>
+                    <p>
+                        а как обратиться внутри функции к лишним параматрам?
+                        <p>Например, было: functions sum (a,b) {} а вызвали sum(3,5,112,34,....., 35)</p>
+                        т.е., с бОльшим кол-вом параметров, чем предусмотрено
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        как внутри функции обратиться, напимер, к 3-му параметру или 5-му?
+                    </p>
+                </li>
+                <li>
+                    <p>что такое arguments?</p>
+                    <p>Це об'єкт </p>
+                </li>
+                <li>
+                    <p>
+                        у меня есть var str = '987654321'; console.log(str[2]); что произойдет после вызова данного кода?
+                    </p>
+                    <p>7</p>
+                </li>
+                <li>
+                    <p>
+                        (function() { var a = b = 5; })(); console.log(b); что и где будет выведено?
+                    </p>
+                    <p>5</p>
+                </li>
+                <li>
+                    <p>какие типы наследования есть в JS?</p>
+                </li>
+                <li>
+                    <p>какая между ними разница? function f(a,b) { return a+b } и var f = function(a,b) { return a+b }
+                    </p>
+                    <p>Перше можна викликати до того як обявити сам код функції. Це зручно якщо сам код функції писати внизу сторінки. А другий тільки після того як обявити функцію</p>
                 </li>
                 <li>
                     <p>Напишите пример любого конструктора с головы</p>
@@ -139,8 +188,48 @@
             <h1>Питання по jQuery</h1>
             <ol>
                 <li>
+                    <p>что такое jQuery?</p>
+                    <p>Це бібліотека js</p>
+                    <p>Нею простіше користуватися ніж js. І до класів і до ід легко описати підключення</p>
+                </li>
+                <li>
+                    <p>чем отличается JS от jQuery?</p>
+                    <p>js це чистий код а jQuery це бібліотека написана з js</p>
+                </li>
+                <li>
+                    <p>
+                        jQuery это библиотека для написания на стороне клиента или на стороне сервера?
+                    </p>
+                    <p>Client-side</p>
+                </li>
+                <li>
+                    <p>для того чтобы работал JQuery что нужно?</p>
+                    <p>підключити бібліотеку</p>
+                </li>
+                <li>
+                    <p>что такое CDN?</p>
+                    <p>Content Delivery Network</p>
+                </li>
+                <li>
                     <p>Как подключить jQuery? Как лучше подключать?</p>
-                    <p>&lt;script src="address"&gt; краще підключати через cdn, я особисто використовую cdn від google</p>
+                    <p>&lt;script src="address"&gt; краще підключати через cdn, я особисто використовую cdn від google
+                    </p>
+                </li>
+                <li>
+                    <p>что такое $ в jQuery? а можно вместо $ что-то другое заюзать для работы с jQuery?</p>
+                    <p>Можна писати просто jQuery, але це вже застарів метод і використовують зараз знак долара</p>
+                </li>
+                <li>
+                    <p>мы можем иметь несколько document.ready() на странице?</p>
+                    <p>Я думаю, що так</p>
+                </li>
+                <li>
+                    <p>какая разница между windows.onload, document.ready, $(function(){})?</p>
+                    <p>Перше як тільки загрузился вікно а друге коли документ завантажений і готовий до прочитання</p>
+                </li>
+                <li>
+                    <p>какая разница между jquery.js и jquery.min.js ?</p>
+                    <p>Перше повна бібліотека без скорочень а друге мініфікована в якій забрані пробіли і відступи на нові строки</p>
                 </li>
                 <li>
                     <p>
@@ -170,6 +259,21 @@
                     <p>Сделайте так, чтобы при нажатии на элемент &lt;а&gt;, алертом выводилось “Good day”</p>
                     <p>$('a').click(function() { alert('Good day'); } );</p>
                 </li>
+                <li>
+                    <p>$('#nameshop').on('change', function() { var id = $(this).val(); alert(id); }); что сделает эта конструкция ? что она отслеживает?</p>
+                    <p>Відстежує те що написав користувач І показує alertom це на екран</p>
+                </li>
+                <li>
+                    <p>
+                        у меня есть &lt;select id="nameshop"&gt; &lt;option value="11"&gt;TEst1&lt;/option&gt; &lt;option&gt;TEst2&lt;/option&gt; &lt;/select&gt; что покажет нам алерт в первом и втором случае?
+                    </p>
+                    <p>Напевно що код покаже</p>
+                </li>
+                <li>
+                    <p>
+                        Чем отличаются $.post $.ajax?
+                    </p>
+                </li>
             </ol>
         </div>
     </section>
@@ -180,6 +284,7 @@
                 <li>
                     <p>Чем отличается WHERE от HAVING?</p>
                     <p>різниці не знаю, використовував лише where для пошуку потрібних данних в таблиці</p>
+                    <p>У where не можна задати агрегатні функції, а в having все групується</p>
                 </li>
                 <li>
                     <p>
@@ -191,6 +296,26 @@
                     <p>Таблице my_table задать псевдоним t и вывести всех, у кого salary выше 5000</p>
                     <p>SELECT t FROM my_table WHERE salary > 5000</p>
                 </li>
+                <li>
+                    <p>
+                        как вывести все данные таблицы items?
+                    </p>
+                    <p>SELECT * FROM items</p>
+                </li>
+                <li>
+                    <p>
+                        как показать количество строк ответа на запрос который мы отправили?
+                    </p>
+                    <p>SELECT * FROM my_table LIMIT 30</p>
+                </li>
+                <li>
+                    <p>Как вывести только поля name_first, name_last, salary из таблицы my_table?</p>
+                    <p>SELECT name_first, name_last, salary FROM my_table</p>
+                </li>
+                <li>
+                    <p>Какая разница между LEFT, RIGHT и INNER JOIN?</p>
+                    <p>Inner join показує загальні записи. Лефт означає показати всі записав зліва а right з права</p>
+                </li>
             </ol>
         </div>
     </section>
@@ -198,6 +323,33 @@
         <div class="main-container">
             <h1>Питання по PHP</h1>
             <ol>
+                <li>
+                    <p>что такое MVC? Какие принципы? С чего состоит?</p>
+                    <p>Шаблон проектування, розділення інтерфейсу, управління логікою. Модель, представлення і контролер. Модифікація кожного компонента робить не залежно один від одного.</p>
+                </li>
+                <li>
+                    <p>с какими MVC ты пересекался?</p>
+                </li>
+                <li>
+                    <p>А что такое MVP и чем отличается от MVC?</p>
+                </li>
+                <li>
+                    <p>что такое рекурсия? Напиши пример кода с головы</p>
+                    <p>public class Solution { public static int recursion(int n) { if (n == 1) { return 1; }return recursion(n - 1) * n; } public static void main(String[] args) { System.out.println(recursion(5)); } }
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        какие магические методы знаешь? Что это вообще?
+                    </p>
+                    <p>call, get, set, sleep, clone, construct. Ці методи починаються з подвійного підчеркування</p>
+                </li>
+                <li>
+                    <p>
+                        Как можно переадресовать юзера на другую страницу?
+                    </p>
+                    <p>header('Location: http://');</p>
+                </li>
                 <li>
                     <p>$this и self чем отличаются?</p>
                     <p>this вказує на обєкт а селф не згадаю</p>
@@ -208,6 +360,41 @@
                 </li>
                 <li>
                     <p>Что такое rtrim($s, ',_,')?</p>
+                    <p>Видаляє пробіли з кінця рядку</p>
+                </li>
+                <li>
+                    <p>Можно передавать в функцию значения, указывая их тип? foo(String, Bool, Array, Int);</p>
+                </li>
+                <li>
+                    <p>
+                        Как можно пользователя направить например после выполнения метода на другую страницу (PHP)?
+                    </p>
+                    <p>Зробити провірку якщо виконаний метод то зробити переправлення на іншу сторінку через header</p>
+                </li>
+                <li>
+                    <p>можно ли пронаследовать два класса в пхп?</p>
+                </li>
+                <li>
+                    <p>Как называется способность объекта скрывать свои данные и реализацию от других объектов системы?
+                    </p>
+                </li>
+                <li>
+                    <p>Что такое виртуальный метод?</p>
+                </li>
+                <li>
+                    <p>
+                        Что такое ассоциативный массив? дай пример
+                    </p>
+                    <p>це масив в якому кожний елемент складається з ключа і значення його </p>
+                    <p>$my_array = array('foo' => 'bar', 'bar' => 'foo'); $my_array = ['foo' => 'bar', 'bar' => 'foo'];
+                    </p>
+                </li>
+                <li>
+                    <p>Вывести максимальное значение элемента массива array(1,2,3,4,10,100,3, 4987,6,7,8,9)</p>
+                    <p>$arr = array(1,2,3,4,10,100,3,4987,6,7,8,9); echo max($arr);</p>
+                </li>
+                <li>
+                    <p>Сгенерировать 3 случайных числа в диапазоне от 0 до 10. Если сумма этих чисел меньше 14, сгенерировать новую тройку</p>
                 </li>
                 <li>
                     <p>
@@ -224,12 +411,22 @@
                     </p>
                     <p>echo "Two";</p>
                 </li>
+                <p>що отримаємо?</p>
+                <p>&lt;?php $a = 10; $b = 4; echo (int)$a / (int)$b; ?&gt;
+                </p>
+                <p>2.5</p>
+                <li>
+                    <p>
+                        Що отримаємо? &lt;?php $str = “7”; if (!empty($str)) echo “EMPTY\n”; else echo “NOT EMPTY!\n”; ?&gt;
+                    </p>
+                </li>
                 <li>
                     <p>
                         Дан массив $arr = array(13,28,15,25,16,11,10,5,17,30). Вывести те его элементы, которые делятся на 5 (без остатка).
                     </p>
                     <p>
-                        Что выведет этот скрипт? &lt;?php $str = “0”; if (!$str) echo “EMPTY</br>”; else echo ‘NOT EMPTY’; if (empty($str)) echo “EMPTY</br>”; else echo “NOT EMPTY”; if (!strlen($str)) echo “EMPTY</br>”; else echo “NOT EMPTY”; ?&gt;
+                        Что выведет этот скрипт? &lt;?php $str = “0”; if (!$str) echo “EMPTY</br>”; else echo ‘NOT EMPTY’; if (empty($str)) echo “EMPTY</br>”; else echo “NOT EMPTY”; if (!strlen($str)) echo “EMPTY
+                        </br>”; else echo “NOT EMPTY”; ?&gt;
                     </p>
                     <p>EMPTY</p>
                     <p>EMPTY</p>
@@ -286,6 +483,13 @@
             </ol>
         </div>
     </section>
+    <footer class="footer">
+        <div class="main-conteiner">
+            <h2>
+                @copyright <a href="https://matviy.pp.ua">matviy.pp.ua</a> 2020
+            </h2>
+        </div>
+    </footer>
     <script defer>
         document.addEventListener("DOMContentLoaded", function(event) {
             let count = 2;
