--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             <form name="myform">
                 <p><input type="text" name="username" placeholder="ENTER LOGIN"></p>
                 <p><input type="password" name="pword" placeholder="ENTER PASSWORD"></p>
-                <p><input type="button" value="Check In" name="Submit" id="submiit">
-                </p>
-
+                <p><input type="button" value="Check In" name="Submit" id="submiit"></p>
             </form>
         </div>
     </div>
@@ -31,6 +29,18 @@
         <div class="main-container">
             <h1>Питання по HTML</h1>
             <ol>
+                <li>
+                    <p>– Що таке DOCTYPE і навіщо він потрібний?</p>
+                    <p>DOCTYPE – це визначення типу документа (Document Type Definition (DTD)), правила, відповідно до яких здійснюється перевірка конкретного документа (веб-сторінки) XML або (X) HTML. За допомогою цього запису браузер визначає, яка в цьому
+                        документі використовується версія DTD. Потрібний він для того, щоб браузери правильно відображали розмітку документа. Якщо не вказаний DOCTYPE, то браузер додаватиме “відсебеньки”, причому кожен браузер додаватиме свої “відсебеньки”.
+                        У результаті про кросбраузерність не може йти мова.</p>
+                </li>
+                <li>
+                    <p>
+                        – Що таке entities?
+                    </p>
+                    <p>Entities – це комбінації знаку & і літерного або цифрового коду після неї, призначені для заміщення символів, які не можуть зустрічатися в “чистому” вигляді в HTML-тексті, наприклад, символу “&lt;“.</p>
+                </li>
                 <li>
                     <p>Для чого служить тег &lt;label&gt;? Напишіть приклад з голови.</p>
                     <p>&lt;label&gt;text&lt;/label&gt;&lt;input type="text"&gt;</p>
@@ -44,6 +54,18 @@
         <div class="main-container">
             <h1>Питання по CSS</h1>
             <ol>
+                <li>
+                    <p>– У чому полягає різниця між записом #my і .my?</p>
+                    <p>#my – селектор ID. Він може бути тільки унікальним на одній сторінці, їх не може бути декілька з одинаковим ім'ям і не можна писати пробіли, ID повинно бути лише одне в свому полі.<br>.my – селектор класу. Класів може бути декілька
+                        з одинаковим ім'ям і можна писати пробіли між класами.</p>
+                </li>
+                <li>
+                    <p>– Що таке псевдокласи?</p>
+                    <p>Псевдокласи – це те, що зазвичай пишуть після селектора через двокрапку, щоб визначити реакцію або стан для цього селектора. Найвідоміші псевдокласи – це :link, :hover, :visited і :active. Псевдокласи мають наступну структуру:</p>
+                    <p>selector:pseudo class { property: value;}</p>
+                    <p>тобто треба лише поставити двокрапку між селектором і псевдокласом.</p>
+                    <p>a.snowman:link { color: blue;}a.snowman:visited { color: purple;}a.snowman:active { color: red;}a.snowman:hover { text-decoration: none; color: blue; background -color: yellow;}</p>
+                </li>
                 <li>
                     <p>body:not([class*="home"]) > aside#block li:nth-child(3) a:before { color: red }</p>
                     <p>Що буде червоного кольору? До чого звертаємося?</p>
@@ -101,6 +123,35 @@
         <div class="main-container">
             <h1>Питання по JavaScript</h1>
             <ol>
+                <li>
+                    <p>
+                        – Треба алертом вивести якесь повідомлення, через 3 секунди після запуску скрипта. Як це зробити?
+                    </p>
+                    <p>Так:</p>
+                    <p>setTimeout (alert ("Hello"), 3000);</p>
+                    <p>Чи так:</p>
+                    <p>setTimeout (function (){alert ("Hello")}, 3000);</p>
+                </li>
+                <li>
+                    <p>– Розкажіть про об’єкти в JavaScript.</p>
+                    <p>Об’єкти (вони ж асоціативні масиви, хеші) і робота з ними в JavaScript реалізується не так, як у більшості мов. Об’єкт в JavaScript є звичайним асоціативним масивом або “хешем”. Він зберігає будь-які відповідності “ключ => значення”
+                        і має декілька стандартних методів.</p>
+                </li>
+                <li>
+                    <p>– Маємо дві функції. Чи є між ними різниця? Якщо є, то яка?</p>
+                    <p>function f (a, b) { return a+b }</p>
+                    <p>і</p>
+                    <p>var f = function (a, b) { return a+b }</p>
+                    <p>Різниця є, вона полягає у видимості функції. Варіант функції без var видний скрізь у поточній зоні видимості. У тому числі й до самого визначення функції. Варіант з var привласнює функцію змінної, тому таку функцію видно тільки після
+                        визначення.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        – Що зробить код: break me_baby; ?
+                    </p>
+                    <p>Вийде з поточного блоку циклу або switch на мітку “me_baby”.</p>
+                </li>
                 <li>
                     <p>
                         Как переадресовать страницу в JavaScript?
@@ -232,6 +283,16 @@
                     <p>Перше повна бібліотека без скорочень а друге мініфікована в якій забрані пробіли і відступи на нові строки</p>
                 </li>
                 <li>
+                    <p>– Знайдіть усі елементи div з класом one, а також усі елементи p з класом two, потім додайте їм усім клас three і візуально плавно спустіть униз.</p>
+                    <p>$("div.one").add ("p.two").addClass ("three").slideDown ("slow");</p>
+                </li>
+                <li>
+                    <p>
+                        – Виберіть div’и, у яких немає класу cls.
+                    </p>
+                    <p>$('div:not(.cls)');</p>
+                </li>
+                <li>
                     <p>
                         Как выбрать все элементы с class = classnam?
                     </p>
@@ -282,6 +343,16 @@
             <h1>Питання по MySQL</h1>
             <ol>
                 <li>
+                    <p>– Що таке SQL-ін’єкція?</p>
+                    <p>SQL- ін’єкції – вбудовування шкідливого коду в запити до бази даних. З використанням SQL-ін’єкцій зловмисник може не лише отримати закриту інформацію з бази даних, але й, за певних умов, внести туди зміни. Вразливість щодо SQL-ін’єкцій
+                        виникає через те, що користувацька інформація потрапляє в запит до бази даних без належної обробки: щоб скрипт не був уразливим, необхідно переконатися в тому, що всі користувацькі дані потрапляють у всі запити до бази даних в
+                        екранованому виді.</p>
+                </li>
+                <li>
+                    <p>– Припустимо, у Вас є інтернет-магазин. Складіть запит, який покаже, скільки грошей приніс кожен окремо взятий покупець у цілому за весь час роботи магазину.</p>
+                    <p>SELECT customer_name, SUM (order_price) FROM ordersGROUP BY customer_name;</p>
+                </li>
+                <li>
                     <p>Чем отличается WHERE от HAVING?</p>
                     <p>різниці не знаю, використовував лише where для пошуку потрібних данних в таблиці</p>
                     <p>У where не можна задати агрегатні функції, а в having все групується</p>
@@ -324,8 +395,99 @@
             <h1>Питання по PHP</h1>
             <ol>
                 <li>
+                    <p>– Скільки типів даних у РНР?</p>
+                    <p>PHP підтримує 8 базових типів даних.</p>
+                    <p><strong>4 скалярні типи:</strong></p>
+                    <p>– boolean. Логічний тип даних, змінні цього типу можуть набувати значень true або false.
+                    </p>
+                    <p>– integer. Цілочисельний тип даних, змінні можуть набувати цілих значень (.-2, – 1, 0, 1, 2.) у діапазоні від – 2^31 до +2^31. Якщо значення перевищує цей поріг, то воно автоматично переводиться в тип float.</p>
+                    <p>– float. Числовий тип даних з плаваючою точкою, може містити як цілі, так і дробові величини.</p>
+                    <p>– string. Строковий тип даних. Містить нефіксовану кількість різних символів. PHP не накладає жодних обмежень на довжину рядка, тому можна сміливо працювати навіть з ДУЖЕ великими рядками.</p>
+                    <p><strong>2 комплексних (складених) типи:</strong></p>
+                    <p>– array. Масив, містить упорядкований список елементів.</p>
+                    <p>– object. Об’єкт, містить деякий об’єкт (екземпляр класу).</p>
+                    <p><strong>2 спеціальних типи:</strong></p>
+                    <p>– resource. Посилання на абстрактний елемент, т. зв. зовнішній ресурс. Приклади зовнішніх ресурсів – посилання на файл і посилання на результат виконання запиту.</p>
+                    <p>– NULL. Порожній тип даних, що означає відсутність якого-небудь значення. Про такі значення зазвичай говорять “не визначено”. Порожнім значенням можна ініціалізувати змінні будь-якого іншого типу.</p>
+                </li>
+                <li>
+                    <p>
+                        – Які магічні методи Ви знаєте? Що це таке взагалі?
+                    </p>
+                    <p>Це методи, зарезервовані в php, які розпочинаються з подвійного підкреслення “__”.</p>
+                    <p><strong>Список усіх магічних методів :</strong></p>
+                    <p>__construct</p>
+                    <p>__destruct</p>
+                    <p>__call</p>
+                    <p>__callStatic</p>
+                    <p>__get</p>
+                    <p>__set</p>
+                    <p>__isset</p>
+                    <p>__unset</p>
+                    <p>__sleep</p>
+                    <p>__wakeup</p>
+                    <p>__toString</p>
+                    <p>__set_state</p>
+                    <p>__clone</p>
+                    <p>__construct і __destruct – найпопулярніші методи, які реалізують базові поняття об’єктно-орієнтованого програмування: конструктор і деструкція;</p>
+                    <p>__call, __callStatic, __get і __set – методи, пов’язані з перевантаженням звернень як до властивостей, так і до методів. Методи __get () і __set () викликаються при установці й набутті значення властивості, а методи __call () і __callStatic
+                        – за виклику методу. Варто зазначити, що ці магічні функції викликатимуться тільки і винятково в тому випадку, якщо запрошеного методу або властивості немає;
+                    </p>
+                    <p>__isset – метод, що спрацьовує при виклику функцій empty () або isset () на неіснуючій чи недоступній властивості класу;</p>
+                    <p>__unset – спрацьовує при виклику функції unset () на неіснуючій або недоступній властивості класу;</p>
+                    <p>__sleep і __wakeup – методи, які викликаються тільки з функцій serialize і unserialize со- відповідно. Метод __sleep буде викликаний відразу при застосуванні до об’єкта функції serialize, а метод __wakeup – при застосуванні unserialize.
+                        Зараз методи застосовуються для збереження поточного стану системи з подальшим відновленням цього стану (наприклад, конект до бази);</p>
+                    <p>__toString – метод, за допомогою якого можна звертатися до класу як до рядка (наприклад, за допомогою print або echo);</p>
+                    <p>__set_state – метод, який викликається для класів, що експортують значення властивостей функцією var_export ();</p>
+                    <p>__clone – викликається при клонуванні об’єкта (введений для використання через те, що об’єкти в php5 і вище передаються за посиланням);</p>
+                    <p>__invoke – викликається при спробі використати об’єкт як функції.</p>
+                </li>
+                <li>
+                    <p>– Що таке static-функція і чим вона відрізняється від “звичайної” (не static)?</p>
+                    <p>Static належить класу, а не екземпляру класу. І викликається у класу, а не в об’єкта, тобто безпосередньо. Оголошення властивостей і методів класу статичними дозволяє звертатися до них без створення екземпляра класу. Атрибут класу,
+                        оголошений статичним, не може бути доступним за допомогою екземпляра класу (але статичний метод може бути викликаний). Оскільки статичні методи викликаються без створення екземпляра класу, то псевдозмінна $this недоступна всередині
+                        методу, оголошеного статичним. Доступ до статичних властивостей класу не може бути отриманий через оператор ->.</p>
+                </li>
+                <li>
                     <p>что такое MVC? Какие принципы? С чего состоит?</p>
                     <p>Шаблон проектування, розділення інтерфейсу, управління логікою. Модель, представлення і контролер. Модифікація кожного компонента робить не залежно один від одного.</p>
+                </li>
+                <li>
+                    <p>– Чи є різниця між одинарними і подвійними лапками в PHP?</p>
+                    <p>У подвійних лапках дані “парсятся”, а в одинарних – ні. За подвійних лапок у даному випадку виведеться Chimay, а за одинарних – $beer. $beer = 'Chimay';echo "$beer";</p>
+                </li>
+                <li>
+                    <p>– Напишіть програму, яка виводить прості числа, тобто що діляться без залишку тільки на себе і на 1.</p>
+                    <p>$lst = array ();$k = " prime";for ($i = 2; $i
+                        < 100; $i++) { for ($j=2; $j < $i; $j++) { if (($i % $j)==0) { $k="not prime" ; }}if ($k==" prime" ) $lst[]=$i;else $k=" prime" ;}foreach ($lst as $list) echo $list . "" ;</p>
+                </li>
+                <li>
+                    <p>– Напишіть программу-цензор, яка б замінювала введені користувачем у форму слова “fuck”, “idiot” і “bitch” на “f**k”, “id**t” і “bi**h”.</p>
+                    <p>$find = array ( 'fuck', 'idiot', 'bitch');$replace = array ( 'f * *k', 'id * *t', 'bi * *h'); If (isset ($_ POST['user_input']) && !empty ($_ POST['user_input'])) { $user_input = $_ POST['user_input']; $user_input_new = str_ireplace
+                        ($find, $replace, $user_input); echo $user_input_new;}</p>
+                </li>
+                <li>
+                    <p>– Що таке динамічні змінні?</p>
+                    <p>Динамічною змінною вважається та, ім’я якої зберігається в самій змінній. Це так звана “змінна змінна”. Наприклад:</p>
+                    <p>$var = " first";$$var = " Second";// $$var == $first == " Second"</p>
+                    <p>$$var – динамічна, її ім’я може мінятися разом зі зміною $var. Також можна зв’язати ім’я змінної зі вмістом іншої змінної неявно:</p>
+                    <p>$first = " second";$second = " third";print $first; // надрукує " second" print $$first; // надрукує " third"</p>
+                </li>
+                <li>
+                    <p>– Що таке шаблони (патерни) проектування?</p>
+                    <p>Патерн проектування – це загальне типове розв’язання деякої проблеми, багаторазово повторюване в процесі проектування архітектури програмного продукту. Вони показують відносини і взаємодію між класами, дозволяють зробити систему гнучкою
+                        і легко змінюваною. За допомогою їх правильного використання підвищується коефіцієнт використання готових рішень.</p>
+                </li>
+                <li>
+                    <p>
+                        – Напишіть приклад реалізації поліморфізму.
+                    </p>
+                    <p>Class One{ function foo (){ echo "Hellofromclass One"!; } function callMe (){ $this ->foo (); }}Class Two extends One{ function foo (){ echo "Hellofromclass Two"; }}$Two = new two ();$Two ->callMe ();
+                    </p>
+                </li>
+                <li>
+                    <p>– Які ще є парадигми (моделі, підходи) програмування, крім ТОП?</p>
+                    <p>З тих, що найчастіше зустрічаються: функціональна, аспектно-орієнтована і процeдурна.</p>
                 </li>
                 <li>
                     <p>с какими MVC ты пересекался?</p>
@@ -442,7 +604,7 @@
                     <p>
                         &lt;?php function foo() { static $count = 4; return ++$count; } print foo(); print foo(); print foo(); ?&gt; Что получим?
                     </p>
-                    <p>5 6 7</p>
+                    <p>567</p>
                 </li>
             </ol>
         </div>
